discussion/kv_engine/136137/136137_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Add a callback to get exclusive access to the vbucket

Change-Id: I8803a985742551a2ffa4a4f3dc2d1ce42a819741

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-09-14 08:08:20.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-14 08:16:35.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5719/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5821/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5821/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4477/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:16: error: no matching function for call to object of type "MakeCompactionContextCallback" (aka "function<shared_ptr<compaction_ctx> (CompactionConfig &, unsigned long, function<std::unique_lock<std::mutex> ()>)>") [clang-diagnostic-error]
    auto ctx = makeCompactionContextCallback(config, 0 /*purgeSeqno*/, []() {
               ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:595:12: note: candidate function not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:72)" to "std::function<std::unique_lock<std::mutex> ()>" for 3rd argument
      _Res operator()(_ArgTypes... __args) const;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4477/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:16:
error: no matching function for call to object of type "MakeCompactionContextCallback" (aka "function<shared_ptr<compaction_ctx> (CompactionConfig &, unsigned long, function<std::unique_lock<std::mutex> ()>)>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4477/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26276/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:16:
error: no matching function for call to object of type "MakeCompactionContextCallback" (aka "function<shared_ptr<compaction_ctx> (CompactionConfig &, unsigned long, function<std::unique_lock<std::mutex> ()>)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26276/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30367/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2316): error C2664: "_Ret std::_Func_class<_Ret,CompactionConfig &,uint64_t,std::function<std::unique_lock<std::mutex> (void)>>::operator ()(CompactionConfig &,uint64_t,std::function<std::unique_lock<std::mutex> (void)>) const": cannot convert argument 3 from "MagmaKVStore::makeCompactionContext::<lambda_95c8d9aee7080ee9f40ba0fe766e7d84>" to "std::function<std::unique_lock<std::mutex> (void)>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30367/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4826/ : FAILURE

Compile error at [2020-09-14T08:09:25.650Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:16:
error: no matching function for call to object of type "MakeCompactionContextCallback" (aka "function<shared_ptr<compaction_ctx> (CompactionConfig &, unsigned long long, function<std::unique_lock<std::mutex> ()>)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4826/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5954/ : FAILURE

Compile error at [2020-09-14T08:14:45.245Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:16:
error: no matching function for call to object of type "MakeCompactionContextCallback" (aka "function<shared_ptr<compaction_ctx> (CompactionConfig &, unsigned long, function<std::unique_lock<std::mutex> ()>)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5954/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13634/ : FAILURE

Compile error at [2020-09-14T08:11:12.186Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2319:6:
error: no match for call to ?(MakeCompactionContextCallback {aka std::function<std::shared_ptr<compaction_ctx>(CompactionConfig&, long unsigned int, std::function<std::unique_lock<std::mutex>()>)>}) (CompactionConfig&, int, MagmaKVStore::makeCompactionContext(Vbid)::<lambda()>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13634/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3003/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
